Fix Icon spacing, Replace :last-child CSS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,20 @@
 .workspace-box {
-  margin-right: 1em;
+  margin-left: 1em;
   color: #CBCBCB;
-}
-
-.workspace-box:last-child {
-  margin-right: 0;
 }
 
 .workspace-box:hover {
   color: #FEFEFE;
 }
 
+.workspace-first {
+  margin-left: 0;
+}
+
 .workspace-active, .workspace-active:hover {
   color: #FBB86C;
+}
+
+.workspace-icon-box-multiple {
+  margin-left: 0.3em;
 }
